--- a/app/templates/admin/_sidebar.html.twig
+++ b/app/templates/admin/_sidebar.html.twig
@@ -1,10 +1,10 @@
 <nav class="admin-sidebar offcanvas offcanvas-start" id="adminSidebar" tabindex="-1" aria-labelledby="adminSidebarLabel" aria-label="Hermio" role="navigation">
     <div class="offcanvas-header d-lg-none">
-        <h5 class="offcanvas-title" id="adminSidebarLabel">Hermio</h5>
+        <h5 class="offcanvas-title" id="adminSidebarLabel" style="font-size: 1rem; font-weight: 600;">Hermio</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="sidebar-header d-none d-lg-block p-3 border-bottom d-flex align-items-center justify-content-between">
-        <h5 class="mb-0 fw-bold">Hermio</h5>
+        <h5 class="mb-0" style="font-size: 1rem; font-weight: 600; color: #212529;">Hermio</h5>
 {#        <button type="button" class="btn btn-link text-muted sidebar-collapse-btn p-0" aria-label="{{ 'nav.collapse'|trans|default('Collapse') }}" title="{{ 'nav.collapse'|trans|default('Collapse') }}">#}
 {#            <i class="fas fa-chevron-left"></i>#}
 {#        </button>#}
