--- a/app/templates/profile/change_password.html.twig
+++ b/app/templates/profile/change_password.html.twig
@@ -1,10 +1,12 @@
-{% extends 'base.html.twig' %}
+{% extends 'base_admin.html.twig' %}
 
 {% block title %}Change Password - Hermio{% endblock %}
 
-{% block body %}
-<div class="auth-container">
-    <div class="auth-card">
+{% block page_title %}{{ 'nav.settings'|trans }} - Change Password{% endblock %}
+
+{% block admin_content %}
+<div class="profile-container">
+    <div class="profile-card">
         <h1>Change Password</h1>
         
         {{ form_start(form) }}
@@ -26,11 +28,11 @@
                 {{ form_errors(form.newPassword.second) }}
             </div>
 
-            <button type="submit" class="btn btn-primary" style="width: 100%;">Change Password</button>
+            <button type="submit" class="btn btn-primary">Change Password</button>
         {{ form_end(form) }}
 
-        <div class="auth-links">
-            <p><a href="{{ path('app_profile') }}">Back to Profile</a></p>
+        <div class="profile-actions" style="margin-top: 20px;">
+            <a href="{{ path('app_profile') }}" class="btn btn-secondary">Back to Profile</a>
         </div>
     </div>
 </div>
